--- a/Index.html
+++ b/Index.html
@@ -4,20 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>Axios</title>
 </head>
 <body>
-    <table id="tableEstudiantes">
-        <tr>
-            <th>id</th>
-            <th>Nombre</th>
-            <th>Apellido Paterno</th>
-            <th>Apellido Materno</th>
-            <th>Corrreo</th>
-        </tr>
+    <div class="container text-center ">
+        <div class="row mt-3">
+            <h1>Ejemplo Axios</h1>
+        </div>
+    </div>
 
-    </table>
+    <div class ="container mt-5">
+        <div class="row ">
+            <div class="col-4 ">
+                    <div class="card">
+                        <div class = "card-header">formulario</div>
+                        <form action="index.html" class="p-4">
+                            <input  class="form-control mt-3" type="text" id="nombre" placeholder="nombre">
+                            <input type="button" class="btn btn-primary mt-3 mb-3" value="enviar">
+                        </form>
+                    </div>
+
+                </div>
+            <div class="col-8">
+                <div class="card">
+                    <div class="card-header">Tabla</div>
+                    <!-- table.talbe.table-hover>(thead>tr>(th[scope=col])*5)+(tbody>tr>th[scope=row]+(td)*4) -->
+                    <table id="tablaEstudiantes" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">id</th>
+                                <th scope="col">nompre</th>
+                                <th scope="col">Primer Apellido</th>
+                                <th scope="col">Segundo Apellido</th>
+                                <th scope="col">Correo</th>
+                            </tr>
+                        </thead>
+                        <!-- <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>carlos</td>
+                                <td>marquez</td>
+                                <td>santa maria</td>
+                                <td>carlos.ms@sucorreo.com</td>
+                            </tr>
+                        </tbody> -->
+                    </table>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
