se implementa el metodo Post, se arregla la tabla del formulario y se limpian cometarios del Proyecto

--- a/Index.html
+++ b/Index.html
@@ -19,9 +19,12 @@
             <div class="col-4 ">
                     <div class="card">
                         <div class = "card-header">formulario</div>
-                        <form action="index.html" class="p-4">
-                            <input  class="form-control mt-3" type="text" id="nombre" placeholder="nombre">
-                            <input type="button" class="btn btn-primary mt-3 mb-3" value="enviar">
+                        <form action="index.html" class="p-4" id ="form-estudiantes">
+                            <input  class="form-control mt-3" type="text" id="nombre" placeholder="nombre" required>
+                            <input  class="form-control mt-3" type="text" id="paterno" placeholder="paterno" required>
+                            <input  class="form-control mt-3" type="text" id="materno" placeholder="materno" required>
+                            <input  class="form-control mt-3" type="text" id="email" placeholder="email" required>
+                            <input type="submit" class="btn btn-primary mt-3 mb-3" value="enviar">
                         </form>
                     </div>
 
@@ -40,15 +43,6 @@
                                 <th scope="col">Correo</th>
                             </tr>
                         </thead>
-                        <!-- <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>carlos</td>
-                                <td>marquez</td>
-                                <td>santa maria</td>
-                                <td>carlos.ms@sucorreo.com</td>
-                            </tr>
-                        </tbody> -->
                     </table>
                 </div>
             </div>
