--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,30 @@
                 </div>
             </div>
         </div>
+        <!-- ejemplo de modal -->
+
+            <!-- Modal -->
+            <div class="modal fade" id="editarestudiante" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Editar estudiante</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <input  class="form-control mt-3" type="text" id="udta-nombre" placeholder="nombre" required>
+                            <input  class="form-control mt-3" type="text" id="udta-paterno" placeholder="paterno" required>
+                            <input  class="form-control mt-3" type="text" id="udta-materno" placeholder="materno" required>
+                            <input  class="form-control mt-3" type="text" id="udta-email" placeholder="email" required>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary"id="btn-save-changes" data-bs-dismiss="modal">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <!-- fin  modal -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
