--- a/Index.html
+++ b/Index.html
@@ -9,13 +9,25 @@
     <title>Axios</title>
 </head>
 <body>
+
+
     <div class="container text-center ">
         <div class="row mt-3">
-            <h1>Ejemplo Axios</h1>
+            <h1>Axios</h1>
         </div>
     </div>
 
-    <div class ="container mt-5">
+    <nav class="navbar navbar-dark bg-dark row justify-content-center">
+        <div class="container-fluid col-10">
+            <a class="navbar-brand">Navbar</a>
+            <form class="d-flex" role="search" id="form-navbar">
+            <input class="form-control me-2" action="#"  placeholder="Search #id" aria-label="Search" id ="id">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+
+    <div class ="container mt-5 mb-5">
         <div class="row ">
             <div class="col-4 ">
                     <div class="card">
@@ -52,30 +64,39 @@
         <!-- ejemplo de modal -->
 
             <!-- Modal -->
-            <div class="modal fade" id="editarestudiante" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Editar estudiante</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <input  class="form-control mt-3" type="text" id="udta-nombre" placeholder="nombre" required>
-                            <input  class="form-control mt-3" type="text" id="udta-paterno" placeholder="paterno" required>
-                            <input  class="form-control mt-3" type="text" id="udta-materno" placeholder="materno" required>
-                            <input  class="form-control mt-3" type="text" id="udta-email" placeholder="email" required>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary"id="btn-save-changes" data-bs-dismiss="modal">Save changes</button>
-                        </div>
+        <div class="modal fade " id="editarestudiante" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Editar estudiante</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input  class="form-control mt-3" type="text" id="udta-nombre" placeholder="nombre" required>
+                        <input  class="form-control mt-3" type="text" id="udta-paterno" placeholder="paterno" required>
+                        <input  class="form-control mt-3" type="text" id="udta-materno" placeholder="materno" required>
+                        <input  class="form-control mt-3" type="text" id="udta-email" placeholder="email" required>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary"id="btn-save-changes" data-bs-dismiss="modal">Save changes</button>
                     </div>
                 </div>
             </div>
+        </div>
         <!-- fin  modal -->
+
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/index.js"></script>
+
+    <footer class="footer mt-auto py-3 bg-light ">
+        <div class="container text-center">
+            <p>&copy; Desarrollado Rafael Molina WEB</p>
+            <p>Mas contenido formacion del desarrolador en <a href="https://www.linkedin.com/in/rafael-de-jesus-molina-osias-7b51231a9/">linkedin.com</a></p>
+        </div>
+    </footer>
 </body>
 </html>
