se implementan las acciones del   evento click para el enlace  todos

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,8 @@
 
     <nav class="navbar navbar-dark bg-dark row justify-content-center">
         <div class="container-fluid col-10">
-            <a class="navbar-brand">Navbar</a>
+            <a class="navbar-brand nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="navbar-brand" id="mostrartodos" href="#">Todos</a>
             <form class="d-flex" role="search" id="form-navbar">
             <input class="form-control me-2" action="#"  placeholder="Search #id" aria-label="Search" id ="id">
             <button class="btn btn-outline-success" type="submit">Search</button>
